# lightwave-mcp

./: .gitignore  Command Port Syntax.md  Cursor Workflow Examples.md  README.md  RULE.md  RULES.md  SERVER_METADATA.json  mcp.json  package.json  pyproject.toml
cache/: layout_commands.json  modeler_commands.json
src/lightwave_mcp/: __init__.py  introspect_commands.py  server.py
src/lightwave_mcp/lwcommandport/: __init__.py
src/lightwave_mcp/lwcommandport/layout/: __init__.py
src/lightwave_mcp/lwcommandport/modeler/: __init__.py
tests/: __init__.py  test_integration_live.py  test_layout_about.py  test_lightwave_mcp.py
tools/: close_connection.json  connect_layout.json  connect_layout_auto.json  connect_modeler.json  connect_modeler_auto.json  discover_lightwave.json  list_connections.json  list_layout_commands.json  list_modeler_commands.json  refresh_command_cache.json  send_layout_command.json  send_modeler_command.json
