[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightwave-mcp"
version = "1.0.0"
description = "An MCP server for controlling LightWave3D Modeler and Layout through the native command port interface"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
    { name = "LightWave Community" }
]
keywords = ["lightwave", "mcp", "modeler", "layout", "command-port", "3d"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Graphics :: 3D",
    "Topic :: Multimedia :: Graphics",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
lightwave-mcp = "lightwave_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Kartaverse/lightwave-mcp"
Repository = "https://github.com/Kartaverse/lightwave-mcp"
Issues = "https://github.com/Kartaverse/lightwave-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lightwave_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
